# garagem-fb

./: pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio_cor_veiculo.py  0004_alter_cor_options_veiculo_ano.py  0005_veiculo_preco.py  0006_veiculo_acessorios.py  0007_alter_veiculo_acessorios.py
garagem_/: admin.py  apps.py  models.py
